# parun

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.static  README.md  cmd.txt
src/: main.cpp
